force-app/main/default/objects/Navigation_Control__c/Navigation_Control__c.object-meta.xml
<CustomObject>
    <label>Navigation Control</label>
    <nameField>
        <displayFormat>TAB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Navigation Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>