force-app/main/default/objects/Navigation_Control__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Navigation Controls</relationshipLabel>
    <relationshipName>Navigation_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>