force-app/main/default/objects/Navigation_Control__c/fields/is_Visible__c.field-meta.xml
<CustomField>
    <fullName>is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Visible?</label>
    <type>Checkbox</type>
</CustomField>