force-app/main/default/objects/Navigation_Control__c/fields/Menu_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item_Name__c</fullName>
    <label>Menu Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>