force-app/main/default/objects/Navigation_Control__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>About Us</fullName>
            </value>
            <value>
                <fullName>Sessions</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Sponsors</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>