force-app/main/default/objects/Navigation_Control__c/fields/Social_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Type__c</fullName>
    <label>Social Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>