force-app/main/default/objects/Navigation_Control__c/recordTypes/Footer_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Footer_Navigation</fullName>
    <active>true</active>
    <label>Footer Navigation</label>
</RecordType>