force-app/main/default/objects/Navigation_Control__c/recordTypes/Header_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Header_Navigation</fullName>
    <active>true</active>
    <label>Header Navigation</label>
</RecordType>