force-app/main/default/objects/Navigation_Control__c/validationRules/Validate_Social_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Social_Link</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Link_URL__c)),
    OR(
        AND(
            ISPICKVAL(Social_Media_Type__c, &apos;Facebook&apos;),
            NOT(CONTAINS(Link_URL__c, &apos;https://www.facebook.com/&apos;))
        ),
        AND(
            ISPICKVAL(Social_Media_Type__c, &apos;Twitter&apos;),
            NOT(CONTAINS(Link_URL__c, &apos;https://twitter.com/&apos;))
        ),
        AND(
            ISPICKVAL(Social_Media_Type__c, &apos;LinkedIn&apos;),
            NOT(CONTAINS(Link_URL__c, &apos;https://www.linkedin.com/&apos;))
        ),
        AND(
            ISPICKVAL(Social_Media_Type__c, &apos;Instagram&apos;),
            NOT(CONTAINS(Link_URL__c, &apos;https://www.instagram.com/&apos;))
        )
    )
)</errorConditionFormula>
    <errorMessage>Please enter valid URL</errorMessage>
</ValidationRule>